--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -663,6 +663,17 @@ Figure~\ref{fig:TCAD_dopingConcentration}.
   \begin{subfigure}[b]{0.5\linewidth}
     \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_28_GNDGR.png}
     \caption{28-GNDGR}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.5\linewidth}
+    \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_55_GNDGR.png}
+    \caption{55-GNDGR}
+  \end{subfigure} \\
+  \begin{subfigure}[b]{0.5\linewidth}
+    \caption{55-GNDGR-100}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.5\linewidth}
+    \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_55_GNDGR_150.png}
+    \caption{55-GNDGR-150}
   \end{subfigure}
   \caption{Doping concentration in TCAD simulations.}
   \label{fig:TCAD_dopingConcentration}
