Added the reference to TCAD

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -227,3 +227,8 @@ keywords = "Global least-squares fit "
   author =	 "X. Llopart and R. Ballabriga and M. Campbell and
                   L. Tlustos and W. Wong",
 }
+
+@online{synopsysTCAD,
+      title          = "Synopsys TCAD",
+      url            = "http://www.synopsys.com/tools/tcad/Pages/default.aspx"
+}
