--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -800,7 +800,7 @@ any path from position $z_0$ to $z_p$.
  electrodes and defines how the charge motion induces a charge to a
  specific electrode. In the specific case of two-electrode configuration the
  electric and the weighting fields are the same. \\
-In a TCAD simulation, the weighting field and potential are obtained
+In a TCAD simulation~\cite{synopsysTCAD}, the weighting field and potential are obtained
 as shown in Figure~\ref{fig:RamoTCAD}. For this study the silicon
 sensor has a thickness of 200~\micron and is over-depleted with a bias
 voltage of \SI{50}{\volt} on the back-side. First, \SI{0}{\volt} is
