--- a/include/planning.tex
+++ b/include/planning.tex
@@ -60,29 +60,37 @@
     \end{itemize}
   \end{itemize}
 
-\item Thin sensors studies (42 pages)
+\item Thin sensors studies
   \begin{itemize}
   \item Samples, sensors geometries (2 pages)
   \item Test-beam setup: EUDET telescope, Timepix3 telescope (4 pages)
   \item Reconstruction software: EUTelescope (Timepix3), pyEudet (2
     pages)
-  \item Simulation software: AllPix description (4 pages)
   \item Test-beam results for thin sensors and validation with
     simulation: present results on the telescope (biased residuals,
     resolution on the DUT), DUT (cluster size, Edep, resolution) for
     all the thicknesses (10 pages)
+  \end{itemize}
+
+\item Simulation of thin sensors and extrapolation to smaller pixels
+  \begin{itemize}
+  \item Simulation software: AllPix description (4 pages)
+  \item Simulation of the telescope
+  \item Validation of the sensors simulation present results on the
+telescope (biased residuals, resolution on the DUT), DUT (cluster
+size, Edep, resolution) for all the thicknesses (10 pages)
+  \item input for the new digitisers for physics simulations, think
+about new charge sharing solutions (?) (5 pages)
+  \end{itemize}
+
+\item Active-edge solutions 
+  \begin{itemize}
   \item Active-edge sensors: process description, assemblies,
     geometries of the edge and GR, efficiency and signal at the edge
     (10 pages)
   \item TCAD simulation 2D and 3D: process description, Efield distribution,
     equipotentials, MIP energy deposition, comparison to data (10 pages)
   \end{itemize}
-
-
-\item Extrapolation of results for smaller pixel sizes: input for the
-  new digitisers for physics simulations, think about new charge
-  sharing solutions (?) (5 pages)
-
 \item Conclusions (1 page)
   
 \end{enumerate}
