Added calibrated MIP signal, TCAD corrected for 100 um silicon sensor, beam angle in MC.

--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -438,6 +438,7 @@ Figure~\ref{fig:TCAD_dopingConcentration}.
     \caption{55-GNDGR}
   \end{subfigure} \\
   \begin{subfigure}[b]{0.5\linewidth}
+    \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_55_GNDGR_100.png}
     \caption{55-GNDGR-100}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.5\linewidth}
