--- a/include/planning.tex
+++ b/include/planning.tex
@@ -60,6 +60,10 @@
     \end{itemize}
   \end{itemize}
 
+% \item Timepix 3 telescope
+%   \begin{itemize}
+%   \item Reconstruction with EUTelescope
+%   \end{itemize}
 \item Thin sensors studies
   \begin{itemize}
   \item Samples, sensors geometries (2 pages)
