Implementing Dominik's first read of Chapter 3 on Silicon detectors.

--- a/include/Calibration.tex
+++ b/include/Calibration.tex
@@ -117,7 +117,7 @@
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.45\textwidth}
-    % \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0005_F01.pdf}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0005_F01.pdf}
     \caption{}
   \end{subfigure}
   \caption{Energy deposition and comparison to
