--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -11,6 +11,11 @@ applications. Though they show some limitations for smaller sizes and
 their performance can degrade from ration induced damages. Silicon
 detectors are predominant for charge particle spectroscopy among
 semiconductor materials. 
+In this chapter, we will review the basic properties of semiconductor
+material, charge generation in silicon and the transport of charge
+carriers through drift and diffusion. Pixel detectors are studied
+through pn-junctions. 
+
 %% --------------------------------------------- %%
 \section{Band structure in solids}
 Due to the periodic lattice of crystalline structure of semiconductor
@@ -32,14 +37,14 @@ since the fermi energy level lies in the conduction band and the
 electrons are free to migrate through the material even at very low
 temperatures. However, for insulators and semiconductors the electrons
 must cross the bandgap to become conductive. The bandgap for
-semiconductors is much lower than for insulators ($5\,\ev$). If an
+semiconductors ($\sim1\,\ev$) is much lower than for insulators ($\sim5\,\ev$). If an
 electron in the valence band gains enough thermal energy to cross the
 bandgap and reach the conduction band, it leaves behind a vacancy (a
 hole) behind in the valence band. The electron-hole pair can move
 under the influence of an external electric field (electrons in the
 opposite direction of the holes). This motion creates conductivity in
 the material. This property is exploited in silicon detectors to
-detect radiation and developed more in the coming sections.
+detect radiation and is developed more in the coming sections.
 
 
 
