--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -136,4 +136,26 @@ the DUT).}
 \subsection{Unbiased resolution on the DUT}
 \subsubsection{Track vs. hit}
 \subsubsection{Track vs. MC}
+
+Unbiased residuals on the DUT ($100\,\micron$ thick sensor) in the x
+and y directions (the dependence on the x and y of the residual is not
+yet corrected in this plot).
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.45\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Telescope/run49_x_track_MC_DUT.pdf}
+    \caption{}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.45\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Telescope/run49_y_track_MC_DUT.pdf}
+    \caption{}
+  \end{subfigure}
+  \caption{The tracking resolution on the DUT comparing the
+    reconstructed track position to the true position of the particles
+    coming from \textsc{Geant4}.}
+  \label{fig:UnbiasedResidualOnDUT}
+\end{figure}
+
+
+
 \subsubsection{Hit vs. MC}
