Modified the title page based on the ETH requirements

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -70,7 +70,7 @@
 % needed at various stages
 \newcommand{\thesistitle}{Performance optimisation and evaluation studies for the CLIC vertex detector}
 \newcommand*{\thesisauthor}{Niloufar Alipour Tehrani}
-\newcommand*{\thesistown}{Place of birth}
+\newcommand*{\thesistown}{citizen of Meyrin (Gen\`{e}ve)}
 \renewcommand*{\InstituteName}{\PI}
 \renewcommand*{\inInstitute}{\inPI}
 \renewcommand*{\InstituteAddress}{\PIaddress}
@@ -87,7 +87,7 @@
 \newcommand*{\thesispromotion}{XX.YY.2015}
 % Month and year of the final printed version of the thesis
 \newcommand*{\thesismonth}{MMM}
-\newcommand*{\thesisyear}{2015}
+\newcommand*{\thesisyear}{2016}
 \newcommand*{\thesisnumber}{BONN-IR-2015-XXX}
 
 %------------------------------------------------------------------------------
