--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -4,42 +4,41 @@
 \title{\thesistitle}
 \subtitle{\vspace*{4ex}
   \begin{otherlanguage}{UKenglish}
-    Dissertation\\
-    zur\\
-    Erlangung des Doktorgrades (Dr.\ rer.\ nat.)\\
-    der\\
-    Mathematisch-Naturwissenschaftlichen Fakultät\\
-    der\\
-    Rheinischen Friedrich-Wilhelms-Universität Bonn
+  A thesis submitted to attain the degree of \vspace*{1ex} \\
+  DOCTOR OF SCIENCES of ETH ZURICH \vspace*{1ex}\\
+  (Dr. sc. ETH Zurich) \vspace*{3ex}
   \end{otherlanguage}
 }
 \author{%
-  vorgelegt von\\
-  \thesisauthor\\
-  aus\\
-  \thesistown
+  presented by \vspace*{1ex} \\
+  \thesisauthor \vspace*{3ex}\\
+  ing. \'{e}l. dipl. EPF, EPF Lausanne \vspace*{3ex}\\
+  born on 11.08.1989 \vspace*{2ex}\\
+  \thesistown \vspace*{4ex}\\
+  accepted on the recommendation of \vspace*{2ex}\\
+  \textbf{Prof. Dr. G\"{u}nther Dissertori} \\
 }
 \date{}
 \publishers{%
-  Bonn \thesisyear
+        \thesisyear
 }
 \lowertitleback{\normalsize
   \begin{otherlanguage}{UKenglish}
-    Angefertigt mit Genehmigung der 
-    Mathematisch-Naturwissenschaftlichen Fakultät der
-    Rheinischen Friedrich-Wilhelms-Universität Bonn
+    %% Angefertigt mit Genehmigung der 
+    %% Mathematisch-Naturwissenschaftlichen Fakultät der
+    %% Rheinischen Friedrich-Wilhelms-Universität Bonn
   \end{otherlanguage}
   
   \vspace*{10ex minus 4ex}
   
   \noindent
   \begin{otherlanguage}{UKenglish}
-    \begin{tabular}{@{}ll}
-      \thesisrefereeonetext: & \thesisrefereeone\\
-      \thesisrefereetwotext: & \thesisrefereetwo\\[2ex]
-      Tag der Promotion:      & \\
-      Erscheinungsjahr:       & 
-    \end{tabular}
+    %% \begin{tabular}{@{}ll}
+    %%   \thesisrefereeonetext: & \thesisrefereeone\\
+    %%   \thesisrefereetwotext: & \thesisrefereetwo\\[2ex]
+    %%   Tag der Promotion:      & \\
+    %%   Erscheinungsjahr:       & 
+    %% \end{tabular}
   \end{otherlanguage}
 }
 
