--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -12,7 +12,7 @@
 \author{%
   presented by \vspace*{1ex} \\
   \thesisauthor \vspace*{3ex}\\
-  ing. \'{e}l. dipl. EPF, EPF Lausanne \vspace*{3ex}\\
+  \textit{ing. \'{e}l. dipl. EPF, EPF Lausanne} \vspace*{3ex}\\
   born on 11.08.1989 \vspace*{2ex}\\
   \thesistown \vspace*{4ex}\\
   accepted on the recommendation of \vspace*{2ex}\\
