[Silicon] on Landau distribution, needs to be completed.

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -232,3 +232,13 @@ keywords = "Global least-squares fit "
       title          = "Synopsys TCAD",
       url            = "http://www.synopsys.com/tools/tcad/Pages/default.aspx"
 }
+
+@article{Landau:1944if,
+      author         = "Landau, L.",
+      title          = "{On the energy loss of fast particles by ionization}",
+      journal        = "J. Phys.(USSR)",
+      volume         = "8",
+      year           = "1944",
+      pages          = "201-205",
+      SLACcitation   = "%%CITATION = JOPYA,8,201;%%"
+}
