--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -135,16 +135,18 @@ electronics.
   \label{fig:LandauDistribution}
 \end{figure}
 
-In literature, several approaches address the calculation of the straggling functions. Two of the most relevant ones are described in \cref{sec:landau} and \cref{sec:bichsel}.
-\subsection{The Landau distribution}\label{sec:landau}
+In literature, several approaches address the calculation of the
+straggling functions. The Landau and the Bichsel models, two of the
+most relevant models, are described in \cref{sec:landau,sec:bichsel}.
 
+\subsection{The Landau distribution}\label{sec:landau}
+Landau distribution~\cite{Landau:1944if}
 \subsection{Bichsel model}\label{sec:bichsel}
 Bichsel~\cite{Bichsel} provides a theory to calculate the
-straggling functions and compares different methods. He also gives an
-approximation of $\Delta_{p}$ and $FWHM$ as function of the thickness
+straggling functions and compares different methods. This method also gives an
+approximation of $\Delta_{p}$ and $w$ as function of the thickness
 $t$ of silicon detectors for particles with charge $\pm1e$ and
-$\beta\gamma>500$ as listed in \cref{eq:MPV1}, \cref{eq:MPV2},
-\cref{eq:FWHM}:
+$\beta\gamma>500$ as listed in \cref{eq:MPV1,eq:MPV2,eq:FWHM}:
 
 \begin{itemize}
 \item For $13<t<110$ [micron]:
